# fumo-compiler

./: .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  a.out  compiler_test.cpp  fumo.out  fumo_module.fm  fumo_module.ll  initialize_build.sh  install.sh  multifiles1.fm  multifiles2.fm  rebuild.sh  run.sh  somefile.ll  staticfunc.fm  tempreadme.md  test-fumo  test.sh  test_compiler.cpp
code-examples/: string.fm
docs/: README.md
docs/language-examples/: calculator.fm  fibonnaci.fm  general-fumo-test.fm  linked-list.fm  memory-demo.fm  minimal-io.fm  raylib.fm  sorting-algorithms.fm  stdio-demo.fm  string.fm  vector-math.fm
docs/language_specification/: fumo_bnf.md
fumo-lang-tests/: scope_basic_tests.fm  scope_name_lookup_tests.fm
language_specification/: fumo_bnf.md
llvm-stuff/: a.out  handwritten-ir.ll  handwritten-ir.s  ir-test.ll  llvm-test.c  llvm-test.s  some-llvm-ir-optimized.ll  some-llvm-ir.ll
llvm_stuff/: llvm-test.cpp  llvm-test.rs  output-ir.ll  some-llvm-ir-optimized.ll  some-llvm-ir.ll
ninja_stuff/: build.sh
notes/: c_bnf.md
old_tests/: command-line-string-O0.ll  command-line-string.s
old_tests/codegen-tests/: string_literals.fm
old_tests/early-ast-tests/: scope_name_lookup.fm
src/: compiler_test.cpp  lexer.cpp  lexer.hpp  lexer_utils.cpp  main.cpp  sample.c  testfile.c  token_definitions.hpp  vimcommands.txt
src/base_definitions/: ast_node.cpp  ast_node.hpp  symbol_table_stack.hpp  symbols.hpp  tokens.hpp  types.hpp
src/codegen/: codegen_utils.cpp  compile_llvm_module.cpp  link_executable.cpp  llvm_codegen.cpp  llvm_codegen.hpp  toy  toy.c
src/language_specification/: c_specification.md  fumo_bnf.md  planning_note.md
src/lexer/: lexer.cpp  lexer.hpp  lexer_utils.cpp  symbol_cases.hpp  symbol_definitions.hpp  token_definitions.hpp
src/macro-utils/: map-macro.hpp  sequence-for.hpp  zip-macro.hpp
src/notes/: c_specification.md  current_bnf.md
src/parser/: ast_node.cpp  ast_node.hpp  declarations.cpp  expressions.cpp  parser.cpp  parser.hpp  parser_errors.hpp  somefile.hpp  type.hpp
src/semantic_analysis/: analysis.hpp  analyzer.cpp  analyzer.hpp  analyzer_utils.cpp  control_flow_analysis.cpp  decl_analysis.hpp  semantics.hpp  storage_assignment.cpp  type_cheker.hpp
src/tests/: code-examples  command-line-string-O0.ll  command-line-string.ll  command-line-string.out  language-examples  test-precendence.c  test-symbols.c  testfile.c
src/tests/basic-if-parsing/: basic-ifs.fm
src/tests/char-literals/: chars.fm  japanese-chars.fm
src/tests/code-examples/: complex-fumo-test.fm  fibonnaci-O0.ll  fibonnaci.fm  fibonnaci.ll  string.fm
src/tests/control-flow/: flow1.fm  flow2.fm
src/tests/fail-control-flow/: fail1.fm  fail10.fm  fail11.fm  fail2.fm  fail3.fm  fail5.fm  fail9.fm
src/tests/fail-init-lists/: fail1.fm  fail3.fm  fail5.fm  fail6.fm  fail7.fm  fail9.fm
src/tests/fumo-std/: string.fm
src/tests/initializer-lists/: valid-initializer-lists-O0.ll  valid-initializer-lists.fm  valid-initializer-lists.ll
src/tests/not_working_old_tests/: example.fm
src/tests/pointer-tests/: pointer-comparison-O0.ll  pointer-comparison.fm  pointer-comparison.ll  pointer-deref-O0.ll  pointer-deref.fm  pointer-deref.ll  pointer-null-check-O0.ll  pointer-null-check.fm  pointer-null-check.ll
src/tests/static-member-functions/: staticfunc1.fm
src/tests/string-literals/: basic_printf-O0.ll  basic_printf.fm  basic_printf.ll  basic_strings-O0.ll  basic_strings.fm  basic_strings.ll  empty-string-O0.ll  empty-string.ll  escape_sequence-O0.ll  escape_sequence.fm  escape_sequence.ll  escaped-string-test-O0.ll  escaped-string-test.ll  fumo-strings-O0.ll  fumo-strings.fm  fumo-strings.ll  func_params-O0.ll  func_params.ll  namespace-strings-O0.ll  namespace-strings.ll  string_cmp.fm  strlen-math-O0.ll  strlen-math.fm  strlen-math.ll  struct_member-O0.ll  struct_member.fm  struct_member.ll
src/tests/structs-and-postfix/: calculator-O0.ll  calculator.fm  (+25 more)
src/type_system/: symbol_definitions.hpp  token_definitions.hpp  type.hpp  type_cheker.hpp
src/utils/: common_utils.hpp  map-macro.hpp  match_construct.hpp  notes.md  notes.txt  vimcommands.txt
tests/: ast_syntax.fm  basic_sem_analysis.fm  command-line-string-O0.ll  command-line-string.fm  command-line-string.ll  command-line-string.out  command-line-string.s  compiler_test.cpp  fumo_module.fm  language-examples  postfix.fm  scope_basic_checks.fm  scope_name_lookup.fm
tests/any-type/: any-compare.fm  any-functions.fm  any-structs.fm  basic-any.fm  complex-any.fm
tests/char-literals/: chars.fm  japanese-chars.fm
tests/codegen-tests/: codegen_func_calls.fm  codegen_structs.fm
tests/control-flow/: accept-returns.fm  flow3.fm  flow4.fm  flow5.fm  if-else-flow.fm
tests/early-ast-tests/: scope_basic_checks.fm  scope_name_lookup.fm
tests/fail-any-type/: any-arithmetic.fm  any-member.fm  deref.fm
tests/fail-char-literals/: fail-chars.fm
tests/fail-control-flow/: fail4.fm  fail6.fm  fail7.fm  fail8.fm  returnfail.fm
tests/fail-init-lists/: fail10.fm  fail2.fm  fail4.fm  fail8.fm  toomanyelems.fm
tests/fail-static-functions/: failstatic1.fm
tests/generics/: box.fm  complete-example.fm  complex.fm  container.fm  fail-self-ref.fm  functions.fm  multiple-types.fm  namespaced.fm  node.fm  pair.fm  ptr.fm  self-reference.fm  simple.fm  swap.fm
tests/initializer-lists/: global-lists.fm  valid-initializer-lists.fm
tests/not_working_old_tests/: command-line-string.ll
tests/part1-tests/: postfix.fm
tests/part2-tests/: codegen_func_calls.fm  llvm_codegen.fm  simple_llvm_codegen.fm
tests/pointer-tests/: pointer-null-check.fm
tests/static-member-functions/: staticfunc1.fm
tests/string-literals/: basic_printf.fm  basic_strings.fm  empty-string.fm  escape_sequence.fm  escaped-string-test.fm  fumo-strings.fm  func_params.fm  namespace-strings.fm  strlen-math.fm  struct_member.fm
tests/structs-and-postfix/: counter.fm  example.fm  factory.fm  nullptr-dereference.fm  recursive-node.fm
tests/while-tests/: while1.fm  while2.fm  while3.fm  while4.fm  while_lots.fm
(+137 files in other folders)
